Thu Jun 28 19:19:13 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* SILC Client 1.1.1.

Sun Jun 24 18:47:55 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* SILC Toolkit 1.1.1.

	* Compile sources with _GNU_SOURCE on Linux systems.  Affected
	  file is configure.ad.

Sun Jun 24 16:33:59 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed Unix signal task dispatching to not lock the signals
	  when dispatching the callback to avoid deadlocks.  Affected
	  file is lib/silcutil/unix/silcunixschedule.c.

Sun Jun 24 14:43:21 CEST 2007  Jochen Eisinger <coffee@silcnet.org>

	* Fix configure output for with-plugin.  Affected file is
	  apps/irssi/configure.ad

Tue Jun 19 17:05:48 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Added SILC_VERSION macro for checking package versions at
	  compile time.  Affected files are configure.ad,
	  includes/silc.h.in and includes/silcversion.h.in.

Mon Jun 18 23:47:22 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Use SILC_VERIFY to assert that silc_rwlock_wrlock can be
	  called only once per thread on Unix.  Affected file is
	  lib/silcutil/unix/silcunixthread.c.  Added same for mutex
	  as well.   Documented same on the API in 
	  lib/silcutil/silcmutex.h.

	* Fixed USERS command reply write-lock unlocking.  Affected file
	  is lib/silcclient/command_reply.c.

Mon Jun 18 08:14:26 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed silc_create_key_pair to check for valid identifier.
	  Affected file is lib/silcapputil/silcapputil.c.

Sun Jun 17 20:08:26 CEST 2007  Jochen Eisinger <coffee@silcnet.org>

	* Rewrite signed public message handling, adopting the new
	  hilight interface.  Affected file is
	  apps/irssi/src/fe-common/silc/fe-silc-messages.c

Thu Jun 14 21:15:31 CEST 2007  Jochen Eisinger <coffee@silcnet.org>

	* Fix off by one error when loading modules.  Affected file is
	  apps/irssi/src/core/modules-load.c

	* Don't delete hilight entry (because it's just a pointer, not a