@@ -1,3 +1,9 @@
+Sat Jun 30 21:48:08 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
+
+	* Set the destination ID to packet stream as SKE responder
+	  if ID was present in key exchange packet.  Affected file
+	  is lib/silcske/silcske.[ch].
+
 Thu Jun 28 19:19:13 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
 
 	* SILC Client 1.1.1.
